docs-archive/apache-airflow-providers-amazon/9.30.0/_sources/_api/tests/system/amazon/aws/example_emr_eks/index.rst.txt
tests.system.amazon.aws.example_emr_eks
=======================================

.. py:module:: tests.system.amazon.aws.example_emr_eks


Attributes
----------

.. autoapisummary::

   tests.system.amazon.aws.example_emr_eks.DAG_ID
   tests.system.amazon.aws.example_emr_eks.ROLE_ARN_KEY
   tests.system.amazon.aws.example_emr_eks.JOB_ROLE_ARN_KEY
   tests.system.amazon.aws.example_emr_eks.JOB_ROLE_NAME_KEY
   tests.system.amazon.aws.example_emr_eks.SUBNETS_KEY
   tests.system.amazon.aws.example_emr_eks.sys_test_context_task
   tests.system.amazon.aws.example_emr_eks.S3_FILE_NAME
   tests.system.amazon.aws.example_emr_eks.S3_FILE_CONTENT
   tests.system.amazon.aws.example_emr_eks.test_context
   tests.system.amazon.aws.example_emr_eks.test_run


Functions
---------

.. autoapisummary::

   tests.system.amazon.aws.example_emr_eks.create_launch_template
   tests.system.amazon.aws.example_emr_eks.delete_launch_template
   tests.system.amazon.aws.example_emr_eks.run_eksctl_commands
   tests.system.amazon.aws.example_emr_eks.delete_iam_oidc_identity_provider
   tests.system.amazon.aws.example_emr_eks.update_trust_policy_execution_role
   tests.system.amazon.aws.example_emr_eks.wait_for_trust_policy_propagation
   tests.system.amazon.aws.example_emr_eks.delete_virtual_cluster


Module Contents
---------------

.. py:data:: DAG_ID
   :value: 'example_emr_eks'


.. py:data:: ROLE_ARN_KEY
   :value: 'ROLE_ARN'


.. py:data:: JOB_ROLE_ARN_KEY
   :value: 'JOB_ROLE_ARN'


.. py:data:: JOB_ROLE_NAME_KEY
   :value: 'JOB_ROLE_NAME'


.. py:data:: SUBNETS_KEY
   :value: 'SUBNETS'


.. py:data:: sys_test_context_task

.. py:data:: S3_FILE_NAME
   :value: 'pi.py'


.. py:data:: S3_FILE_CONTENT
   :value: Multiline-String

   .. raw:: html

      <details><summary>Show Value</summary>

   .. code-block:: python

      """
      k = 1
      s = 0
      
      for i in range(1000000):
          if i % 2 == 0:
              s += 4/k
          else:
              s -= 4/k
      
          k += 2
      
      print(s)
      """

   .. raw:: html

      </details>



.. py:function:: create_launch_template(template_name)

.. py:function:: delete_launch_template(template_name)

.. py:function:: run_eksctl_commands(cluster_name, ns)

.. py:function:: delete_iam_oidc_identity_provider(cluster_name)

.. py:function:: update_trust_policy_execution_role(cluster_name, cluster_namespace, role_name)

.. py:function:: wait_for_trust_policy_propagation(cluster_name, role_name)

   Validate that the IAM trust policy has propagated by checking the role's
   trust policy contains the expected OIDC provider.

   Uses exponential backoff retries (up to 5 minutes) instead of a fixed sleep,
   which avoids both wasting time when propagation is fast and failing when it's slow.


.. py:function:: delete_virtual_cluster(virtual_cluster_id)

.. py:data:: test_context
   :value: None


.. py:data:: test_run

